# psi-fatture-sa

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
scripts/: seed.sh  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/controller/: appointment_controller.rs  client_controller.rs  config_controller.rs  dashboard_controller.rs  invoice_controller.rs  mod.rs  service_controller.rs
src-tauri/src/app/db/: connection.rs
src-tauri/src/app/entity/: appointment.rs  client.rs  invoice.rs  invoice_line.rs  mod.rs  professional_config.rs  recurrence_group.rs  service.rs
src-tauri/src/app/model/: appointment.rs  client.rs  config.rs  dashboard.rs  invoice.rs  mod.rs  service.rs
src-tauri/src/app/model/appointment/: appointment.rs  create_appointment_input.rs  create_recurring_appointments_input.rs  mod.rs  update_appointment_input.rs
src-tauri/src/app/model/client/: client.rs  client_type.rs  create_client_input.rs  mod.rs  (+1 more)
src-tauri/src/app/repository/: appointment_repository.rs  client_repository.rs  config_repository.rs  invoice_repository.rs  mod.rs  service_repository.rs
src-tauri/src/app/service/: appointment_service.rs  client_service.rs  config_service.rs  dashboard_service.rs  invoice_service.rs  mod.rs  service_service.rs  tax_service.rs
src-tauri/src/commands/: appointments.rs  clients.rs  config.rs  dashboard.rs  invoices.rs  mod.rs  services.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: mod.rs  models.rs  tax.rs
src-tauri/src/migration/: m20240101_create_schema.rs  m20240201_add_batch_invoicing.rs  mod.rs
(+55 files in other folders)
